--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,8 @@ html {
     font-size: 62.5%; /*1rem = 10px*/
 }
 body {
-  background-color: #F4F3F1;
+  background-color: #1C1B17;
+  color: #F4F3F1;
   font-weight: 400;
   font-size: 1.6rem;
   overflow-x: hidden;
