--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,7 +7,42 @@ html {
 body {
   background-color: #1C1B17;
   color: #F4F3F1;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
   overflow-x: hidden;
+}
+
+a, a:visited {
+  color: #F4F3F1;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #E9C46A;
+}
+/*NAV*/
+#root-nav {
+  height: 75px;
+}
+#desktop-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#desktop-nav img {
+  height: 50px;
+  margin: 0 60px;
+}
+#desktop-navlink {
+  display: flex;
+  gap: 24px;
+  margin: 0 60px;
+}
+#desktop-navlink a{
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+#mobile-nav {
+  display: none;
 }
