--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -76,6 +76,19 @@ h2 {
   width: 80%;
   margin: 60px auto;
 }
+/*Dynmap*/
+.dynmap-player {
+  width: 100%;
+  height: 100%;
+}
+#dynmap-btn {
+  position: absolute;
+  bottom: 24px;
+  right: 24px;
+  background-color: #1C1B17;
+  border-radius: 5px;
+  padding: 12px;
+}
 /*Footer*/
 .root-footer {
   display: flex;
