--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,6 +66,7 @@ strong {
   height: 80vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -73,6 +74,17 @@ strong {
   text-align: center;
   font-size: 5.6rem;
   letter-spacing: .6rem;
+}
+#banner p {
+  margin-top: 12px;
+  font-size: 2rem;
+  font-weight: 500;
+}
+#online {
+  color: #2CD673;
+}
+#offline {
+  color: #F56060;
 }
 /*PAge content*/
 .page-content {
