--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -91,15 +91,30 @@ strong {
 }
 /*PAge content*/
 .page-content {
-  width: 80%;
+  width: 60%;
   margin: 60px auto;
 }
-.info-box {
-  background-color: #2A2822;
-  width: 300px;
-  padding: 12px;
-  box-shadow: 0px 0px 10px #464339;
+.info-container {
+  display: flex;
+  flex-direction: column;
 }
+.info-box {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 32px;
+  grid-row-gap: 0px;
+}
+.image-section {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.info-box h3 {
+  font-size: 2.6rem;
+  margin-bottom: 24px;
+}
+
 /*JOIN*/
 .rules-list {
   list-style: disc;
