--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,6 +32,7 @@ h2 {
 }
 p {
   line-height: 2.4rem;
+  margin-bottom: 1.2rem;
 }
 strong {
   font-weight: 700;
@@ -97,6 +98,10 @@ strong {
   width: 60%;
   margin: 60px auto;
 }
+.title-page {
+  text-align: center;
+  margin-bottom: 32px;
+}
 .info-container {
   display: flex;
   flex-direction: column;
@@ -117,6 +122,17 @@ strong {
 .info-box h3 {
   font-size: 2.6rem;
   margin-bottom: 24px;
+}
+.join-btn {
+  padding: 12px;
+  margin-top: 24px;
+  border-radius: 50px;
+  background-color: #E9C46A;
+  position: absolute;
+}
+.join-btn:hover, .join-btn:active, .join-btn:focus {
+  background-color: #AB3428;
+  color: #F4F3F1;
 }
 
 /*JOIN*/
