--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,6 +29,10 @@ h1 {
 }
 h2 {
   font-size: 3.2rem;
+  margin-bottom: 2.4rem;
+}
+h3 {
+  font-size: 2.6rem;
 }
 p {
   line-height: 2.4rem;
@@ -124,22 +128,50 @@ strong {
   margin-bottom: 24px;
 }
 .join-btn {
-  padding: 12px;
+  padding: 12px 18px;
   margin-top: 24px;
   border-radius: 50px;
   background-color: #E9C46A;
+  font-weight: 600;
   position: absolute;
 }
-.join-btn:hover, .join-btn:active, .join-btn:focus {
+.join-btn:hover, .join-btn:active, .join-btn:focus, .join-discord:hover, .join-discord:active, .join-discord:focus{
   background-color: #AB3428;
   color: #F4F3F1;
 }
 
 /*JOIN*/
+.rules{
+  margin-bottom: 2.4rem;
+}
 .rules-list {
   list-style: disc;
   margin-left: 2.4rem;
   line-height: 2.4rem;
+}
+.list-state {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.state {
+  border: solid 1px #464339;
+  border-radius: 5px;
+  width: 500px;
+  padding: 12px;
+}
+.state h3 {
+  margin-bottom: 1.2rem;
+}
+.join-discord {
+  display: block;
+  width: 33%;
+  text-align: center;
+  background-color: #E9C46A;
+  padding: 24px;
+  margin: 24px auto;
+  font-size: 2.4rem;
+  font-weight: 600;
 }
 /*Dynmap*/
 .dynmap-player {
