--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -28,6 +28,13 @@ h1,h2,h3 {
     background-size: cover;
     height: 500px;
 }
+#header-join {
+    background-image: url('/assets/img/banierre-devaron-v2.webp');
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
+    height: 250px;
+}
 .btn-primary {
     --bs-btn-color: #212529;
     --bs-btn-bg: #E9C46A;
