--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -56,3 +56,13 @@ h1,h2,h3 {
 .footer-text {
     color: #989281;
 }
+/*Dynmap*/
+.dynmap-player {
+    width: 100%;
+    height: 100%;
+}
+#dynmap-btn {
+    position: absolute;
+    bottom: 24px;
+    right: 24px;
+}
