--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -27,11 +27,16 @@ h1,h2,h3 {
 .navbar-collapse {
     justify-content: flex-end;
 }
+
 .navbar-toggler {
     border: none;
 }
 .navbar-toggler:focus {
     box-shadow: none;
+}
+.navbar-toggler>.bi-list {
+    font-size: 1.5em;
+    vertical-align: middle;
 }
 #header-home {
     background-image: url('/assets/img/banierre-devaron-v2.webp');
